--- a/styles/custom.css
+++ b/styles/custom.css
@@ -28,3 +28,25 @@ div .choiceBtn {
     margin: 5px;
 }
 
+#theAnswer {
+    font-size: 45px;
+    font-weight: bold;
+    font-family: monospace;
+    letter-spacing: 3px;
+}
+
+#theAnswer > p {
+    font-size: 30px;
+}
+
+#score {
+    font-size: 30px;
+    letter-spacing: 3px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
