--- a/styles/custom.css
+++ b/styles/custom.css
@@ -50,3 +50,50 @@ div .choiceBtn {
     user-select: none;
 }
 
+.lum {
+    border-radius: 30px;
+    font-size: 16px;
+    display: inline-block;
+    top: 330px;
+    padding-left: 375px;
+    margin-left: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.gameTalk {
+    color: rgba(0, 0, 0, .7);
+    text-align: center;
+}
+
+#addColors {
+    background-color: rgba(0, 0, 0, .05);
+    border-radius: 4px;
+    border: solid 1px rgba(0, 0, 0, .02);
+    font-size: 30px;
+    padding: 0px 8px 2px 8px;
+    display: inline-block;
+    font-weight: bolder;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
