--- a/styles/custom.css
+++ b/styles/custom.css
@@ -76,6 +76,34 @@ div .choiceBtn {
     font-weight: bolder;
 }
 
+#removeColors {
+    background-color: rgba(0, 0, 0, .05);
+    border-radius: 4px;
+    border: solid 1px rgba(0, 0, 0, .02);
+    font-size: 30px;
+    padding: 0px 8px 2px 8px;
+    display: inline-block;
+    font-weight: bolder;
+}
+
+#toggleHints {
+    background-color: rgba(0, 0, 0, .05);
+    color: rgba(0, 0, 0, .4);
+    border-radius: 4px;
+    border: solid 1px rgba(0, 0, 0, .1);
+    font-size: 20px;
+    padding: 10px;
+    display: inline-block;
+    font-weight: 100;
+    margin-left: 50px;
+}
+
+.btn:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 60px 0px rgba(195, 255, 138, 1);
+}
+
+
 
 
 
