--- a/styles/custom.css
+++ b/styles/custom.css
@@ -103,6 +103,54 @@ div .choiceBtn {
     box-shadow: 0px 0px 60px 0px rgba(195, 255, 138, 1);
 }
 
+.rainbowSizeUI {
+    font-size: 30px;
+    margin-top: 20px;
+    color: rgba(0, 0, 0, .4);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.footer {}
+
+.noselect {}
+
+.popup {
+    width: 300px;
+    height: 90px;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 1);
+    border-color: rgba(0, 0, 0, .1);
+    border-style: solid;
+    border-width: 1px;
+    position: absolute;
+    top: 210px;
+    margin-left: 150px;
+    margin-right: 150px;
+    font-size: 40px;
+    line-height: 90px;
+    box-shadow: 5px 5px 30px 0px rgba(0, 0, 0, .2);
+}
+
+.glow {
+    box-shadow: 0px 0px 60px 0px rgba(195, 255, 138, 1);
+    /*     border-color: rgba(195, 255, 138, 1);
+    border-style: solid;
+    border-width: 1px;*/
+}
+
+.sadGlow {
+    box-shadow: 0px 0px 60px 0px rgba(155, 0, 0, .9);
+    /*     border-color: rgba(195, 255, 138, 1);
+    border-style: solid;
+    border-width: 1px;*/
+}
+
+.secretWinner {}
 
 
 
